# claude-mcp-server-template

./: .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pantry-mock  LESSONS_LEARNED.md  README.md  ROADMAP.md  SECURITY.md  TIMELINE.md  config.toml  docker-compose.yml  healthcheck.py  main.py  pantry_mock_api.py  pyproject.toml  release-notes-v1.0.0.md  setup-repo-structure.ps1  sprint.ps1
.claude/: Constitution.md  settings.local.json
.claude/commands/: sprint-check.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml
docs/: brainstorm-input.md  decisions.md  design-v0.1.0.md  dry-run.md  manual-http-handshake.md  runbook.md  sources.md
marketing/: post-ship-bundle.md  post-ship-bundle.md.bak-J13
src/: config.py  error_messages.py  models.py  pantry_client.py  server.py  telemetry.py
src/prompts/: weekly_planner.py
src/resources/: recipe_resource.py
src/tools/: generate_meal_plan.py  get_recipe.py  search_recipes.py  update_pantry.py
tasks/: anchor-j13-14h.md  anchor-j14.md  anchor-j15.md  todo-j14.md  todo.md
tests/integration/: test_get_recipe_e2e.py
tests/unit/: test_auth.py  test_config.py  test_dry_run.py  test_error_messages.py  test_generate_meal_plan.py  test_get_recipe.py  test_pantry_client.py  test_recipe_resource.py  test_search_recipes.py  test_security.py  test_smoke.py  test_update_pantry.py  test_weekly_planner.py
tools/: cut-decision.py
