[project]
name = "claude-mcp-server-template"
version = "1.0.0"
description = "Production-survival Python MCP server template — Tools, Resources, Prompts; Streamable HTTP transport; OpenTelemetry + Jaeger observability; JSON-RPC healthcheck; Docker compose stack; ADR-light decisions documented."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "fastmcp[tasks]>=3.0",
    "httpx>=0.27",
    "mcp[cli]>=1.27",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-sdk>=1.20.0",
    "pydantic-settings>=2.0",
    "tenacity>=9.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires external services)",
]
addopts = ["-m", "not integration", "--cov=src", "--cov-report=xml", "--cov-report=term"]
